# Sharingan

./: .env.example  .gitignore  Basic_Workflow.mmd  Dockerfile  ENGINEERING_LOG.md  README.md  arch.mmd  pyproject.toml  tree.txt  workflow.mmd
config/: base.yaml  mitre_attack_knowledge_base.json
docs/: Fututre_Improvements.txt  Structure.txt  setup_guide.md
docs/design/: TECHNICAL_ARCHITECTURE.md
reports/: report_20260411_154745.json
scripts/: run_scan.py
sharingan_issra/: main.py  setup.py
sharingan_issra/ai/: decision_engine.py  local_ai.py
sharingan_issra/core/: orchestrator.py  parser.py  utils.py
sharingan_issra/knowledge_base/: vulns.json
sharingan_issra/recon/: amass_enum.py  harvester.py  nmap_scan.py
sharingan_issra/reports/: report_generator.py  sharingan_10.0.1.8_20260404_190327.json  sharingan_10.0.1.8_20260404_190327.md  sharingan_192.168.1.10_20260404_184848.json  sharingan_192.168.1.10_20260404_184848.md  sharingan_192.168.1.5_20260412_121452.json  sharingan_192.168.1.5_20260412_121452.md  sharingan_scanme.nmap.org_20260412_123132.json  sharingan_scanme.nmap.org_20260412_123132.md
sharingan_issra/sharingan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: cli.py  main.py
src/ai/: __init__.py  ai_handler.py  base_provider.py  guardrails.py  ollama_client.py  openai_client.py  openrouter_client.py  prompt_templates.py
src/core/: __init__.py  attack_decision_engine.py  config_loader.py  logger.py  orchestrator.py  parser.py  target_resolver.py
src/modules/: __init__.py  base.py
src/reports/: generator.py
src/utilis/: subprocess_manager.py
src/utils/: __init__.py  dependency_check.py  subprocess_manager.py  validators.py
tests/: __init__.py
tests/unit/: __init__.py  (+5 more)
(+17 files in other folders)
